# RematesQA

./: .gitignore  README.md  utilities.py
Pylenium2.0/: .gitignore  pyproject.toml
Pylenium2.0/tests/: (2)remate.py  test_(3)articulo.py
RematesQA/: pyproject.toml  utilities.py
RematesQA/tests/: (0)noUsuario.py  test_(1)martillero.py  test_(3)articulo.py  test_(3)lotes.py
tests/: (0)noUsuario.py  (1)martillero.py  (2)remate.py  (4)interaccionRemate.py  test_(4)interaccionRemate.py
